<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name_prompt"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginEnd="8dp" />

                <EditText
                    android:id="@+id/item_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/todo"
                    android:inputType="textAutoComplete"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_location_prompt"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginEnd="8dp" />

                <EditText
                    android:id="@+id/item_location_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/todo"
                    android:inputType="textAutoComplete"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/save_item_add_button"
                android:text="@string/save"
                android:layout_marginTop="64dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>