<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="com.ashwinrao.appskeleton.data.Item"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/photo_iv"
            android:src="@drawable/ic_launcher_foreground"
            android:background="@drawable/ic_launcher_background"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toRightOf="@id/photo_iv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/name_tv"
                android:text="@{item.name}"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/colorPrimaryDark"
                tools:text="@string/item_name_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/photo_iv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/location_tv"
                android:text="@{item.location}"
                android:textSize="16sp"
                tools:text="@string/item_location_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>